--- a/PhotoTopia.Application/PhotoTopia.Application.csproj
+++ b/PhotoTopia.Application/PhotoTopia.Application.csproj
@@ -5,10 +5,17 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Interfaces\" />
-    <Folder Include="Features\" />
+    <Folder Include="Features\CustomerCQRS\Commands\" />
+    <Folder Include="Features\CustomerCQRS\Queries\" />
+    <Folder Include="Features\ProductCQRS\Commands\" />
+    <Folder Include="Features\ProductCQRS\Queries\" />
+    <Folder Include="Features\UserCQRS\Commands\" />
+    <Folder Include="Features\UserCQRS\Queries\" />
     <Folder Include="DataTransferObjects\" />
-    <Folder Include="Common\" />
+    <Folder Include="Interfaces\Data\" />
+    <Folder Include="Interfaces\DataAccessObject\" />
+    <Folder Include="Interfaces\Repositories\" />
+    <Folder Include="Interfaces\Services\" />
     <Folder Include="Wrappers\" />
   </ItemGroup>
 
