--- a/PhotoVoir.Presentation/appsettings.json
+++ b/PhotoVoir.Presentation/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnectionString" : "string";
+    "DefaultConnectionString" : "string"
   }
 }
