Building out Database and simplifying code

--- a/PhotoVoir.Presentation/appsettings.json
+++ b/PhotoVoir.Presentation/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnectionString" : "string"
+    "Default": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Photovoir;Integrated Security=True;"
   }
 }
