interfaces for product reop

--- a/Photovoir/appsettings.json
+++ b/Photovoir/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=Photovoir;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Data Source=photovoirdb.database.windows.net;Initial Catalog=Photovoir-prod;User Id=csadmin;Password=b$tY9&?g;"
   },
   "Logging": {
     "LogLevel": {
