--- a/Photovoir/appsettings.Development.json
+++ b/Photovoir/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=photovoirdb.database.windows.net;Initial Catalog=Photovoir-PRD;User ID=csadmin;Password=b$tY9&?g;Connect Timeout=30;Encrypt=True;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": ""
   },
   "Logging": {
     "LogLevel": {
