--- a/Photovoir/appsettings.json
+++ b/Photovoir/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=photovoirdb.database.windows.net;Initial Catalog=Photovoir-prod;User Id=csadmin;Password=b$tY9&?g;"
+    "DefaultConnection": ""
   },
   "Logging": {
     "LogLevel": {
